# WortSpark

./: .gitignore  .nova  Dockerfile  README.md  pyproject.toml  requirements.txt
wortspark_app/: __init__.py  __main__.py  app.py  build_graph.py  generator.py  icl.py  notebook.ipynb  prompts.py  utils.py  validate_syntax.py
wortspark_app/data/: dataset.jsonl
