[tool.poetry]
name = "wortspark_app"
version = "0.0.1"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
loguru = "^0.7.2"
wandelbots-nova = "^0.26.2"
python-decouple = "^3.8"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "2.17"

[tool.poetry.scripts]
serve = "wortspark_app:main"
